# ner-dataset

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  pages.yml
datasets/: README.md  arxiv_gold.jsonl  synthetic_blog_100.jsonl  synthetic_mixed_100.jsonl  synthetic_news_100.jsonl  synthetic_scientific_100.jsonl  synthetic_transcript_100.jsonl
docs/: for-agents.md  index.html  stats.json
generate/: blog_100.yaml  mixed_100.yaml  news_100.yaml  scientific_100.yaml  transcript_100.yaml
scripts/: build_stats_page.py  validate_datasets.py
